# glug

./: .envrc  .gitignore  .sqruff  Cargo.toml  Dockerfile  devenv.nix
.sqlx/: query-2467aa73f510a9d9bd1f491803f000bfc767562697fbe204daa958ece51e1300.json  query-3e306cebe3c317eec39f9a37c1505a0ec2cf9f47dd8308b42d454ae1c336774b.json  query-50f14fedbaff23dc2425089f6e11876923b3d2de3cffbd6d83b58cb892c3b6c1.json  query-5a5cdf61901c9c236d252a0d2e19f63561452e79c8cc76ef2533407d083b15d6.json  query-5a5ddc631c4bc87b89da932ab88e1e6c4bf2223ae99c0f9222a772f14e34d2b8.json  query-6e652299ea288ac870597b283bc5e1276d229cb34f508fe2c5ff91bdce28b125.json  query-7f4677a5c4d297e4da1989e6b6df393bb2944fb7e45c251291d631d8963d42b6.json  query-889707cc8d749b095f2adf2453cfe05ab54c3f46fbdd040f33c9a2f1ef444762.json  query-a3ea166e699a819cf63ffd7e819c058a10765b64e9fbf04563baa2f3c2c107d7.json  query-b59ce12fba42b0b6c82a388a6c48f40ef1f1f8fef865eb991a1eb82cf8a7f7d4.json  query-c0bb333e7a88ce5d58e44b1297de71f8de52805959f311e793900776364dd314.json  query-d7d3ddf154870b2b3a943ec3eb613943a574e0293830fa7fdcb8c5e1a683f4ba.json  query-db5debed25ede75531c29fa7fc3b136a9c59ec7a81e97f1340c706e49c81d1a6.json  query-e7b2cfe59ff21e876dca78dd93649c6b3b37aa4196812b5ca43dce1ab35e45ca.json
glug-bot/: Cargo.toml
glug-bot/src/: main.rs  util.rs
glug-core/: Cargo.toml
glug-graphs/: Cargo.toml
glug-graphs/src/: lib.rs  main.rs
glug-importer/: Cargo.toml
glug-importer/src/: lib.rs  main.rs
migrations/: 20250713002952_init.down.sql  20250713002952_init.up.sql  20250713120949_system_user.down.sql  (+3 more)
(+6 files in other folders)
