[package]
name = "glug-glug-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
glug-glug-core = { path = "../glug-core/" }
