[package]
name = "glug-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
glug-glug-core = { path = "../glug-core/" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
